--- a/Projects/ProjectKB/ProjectKBWindow.xaml
+++ b/Projects/ProjectKB/ProjectKBWindow.xaml
@@ -273,6 +273,9 @@
             <StatusBarItem>
                 <Button Content="Test" Click="Button_Click"/>
             </StatusBarItem>
+            <StatusBarItem>
+                <Button Content="Recipe" Command="{Binding EditRecipeCommand}"/>
+            </StatusBarItem>
         </StatusBar>
 
     </Grid>
