--- a/Engine/ColorVision.Engine/Pattern/PatternWindow.xaml
+++ b/Engine/ColorVision.Engine/Pattern/PatternWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="ColorVision.Engine.Pattern.TestPatternWpf"
+﻿<Window x:Class="ColorVision.Engine.Pattern.PatternWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ColorVision.Engine.Pattern"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance local:TestPatternWpfConfig}"
+        d:DataContext="{d:DesignInstance local:PatternWindowConfig}"
         Title="图卡生成工具" Height="600" Width="1000" Initialized="Window_Initialized">
     <Grid>
         <Grid.ColumnDefinitions>
