--- a/Projects/ProjectKB/TestWindow.xaml
+++ b/Projects/ProjectKB/TestWindow.xaml
@@ -11,6 +11,8 @@
             <Button Content="getModbusData" Click="Button_Click"/>
             <Button Content="SetModusValue 1" Click="Button1_Click"/>
             <Button Content="Test_Mesh" Click="Test_Mesh_Click"/>
+            <Button Content="CheckWIP" Click="Test_Mesh_Upload_Click"/>
+
         </StackPanel>
         
     </Grid>
