--- a/Projects/ProjectKB/ProjectKBWindow.xaml
+++ b/Projects/ProjectKB/ProjectKBWindow.xaml
@@ -279,6 +279,9 @@
             <StatusBarItem>
                 <Button Content="Summory" Command="{Binding SummaryManager.EditCommand}"/>
             </StatusBarItem>
+            <StatusBarItem>
+                <Button Content="TestDB" Click="Button_Click_1"/>
+            </StatusBarItem>
         </StatusBar>
 
     </Grid>
